[B][COLOR red]Update - v1.0.7 - Sept 04, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fix typo in version bump and updated changelog[/I]

[B][COLOR red]Update - v1.0.6 - Sept 03, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Changes for Venom compliant code requirements[/I]

[B][COLOR red]Update - v1.0.5 - May 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added service for settings changes.  This now helps items
    to change and be more responsive than before.[/I]
[COLOR yellow]--[/COLOR][I] Fixed issue where wrong year was causing bookmark issues.[/I]

[B][COLOR red]Update - v1.0.4 - May 8, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added "Clear Item Bookmark".  This will only show for items
    with a bookmark and will clear just that item only.[/I]

[B][COLOR red]Update - v1.0.3 - May 6, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added "Play from Here" ability for continual episode playback.
    Progress widget can now play all episodes from
    UpNext/Progress point forward. Playlist is built and
    autoplay begins upon selection.  Also added setting
    to enable or disable new option in settings.[/I]

[B][COLOR red]Update - v1.0.2 - April 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Rescrape option showing on unplayable items.[/I]
[COLOR yellow]--[/COLOR][I] Added settings options to turn on and off context menu items.[/I]
[COLOR yellow]--[/COLOR][I] Added Auto Play and Source Select context menu options to
    be inverse of addon play method chosen.[/I]
[COLOR yellow]--[/COLOR][I] Some options did not return to homescreen on back, this is
    now fixed.[/I]