@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="context.venom" version="1.0.7" name="Venom - Global Context Menu Items" provider-name="Venom">
+<addon id="context.venom" version="1.0.8" name="Venom - Global Context Menu Items" provider-name="Venom">
 	<requires>
 		<import addon="xbmc.python" version="2.23.0" />
 	</requires>
@@ -131,8 +131,9 @@
 			<fanart>fanart.png</fanart>
 		</assets>
 		<news>
-[B][COLOR red]Update - v1.0.7 - Sept 04, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Fix typo in version bump and updated changelog[/I]
+[B][COLOR red]Update - v1.0.8 - Sept 29, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fix issue with accent characters causing stop errors.[/I]
+[COLOR yellow]--[/COLOR][I] added service logging notice for kodi.log.[/I]
 		</news>
 	</extension>
 </addon>
