@@ -1,3 +1,7 @@
+[B][COLOR red]Update - v1.0.8 - Sept 29, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fix issue with accent characters causing stop errors.[/I]
+[COLOR yellow]--[/COLOR][I] added service logging notice for kodi.log.[/I]
+
 [B][COLOR red]Update - v1.0.7 - Sept 04, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Fix typo in version bump and updated changelog[/I]
 
